syntax = "proto3";

package readerService;

option go_package = "./;readerService";

import "google/protobuf/timestamp.proto";


message Article {
  int32 ID = 1;
  string Author = 2;
  string Title = 3;
  string Body = 4;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message SearchReq {
  string Search = 1;
  string Author = 2;
  int64 page = 3;
  int64 size = 4;
}

message SearchRes {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
  repeated Article Articles = 6;
}

service readerService {
  rpc SearchArticle(SearchReq) returns (SearchRes);
}